--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,5 @@
 /*   
-  Project by Zua 
-  https://github.com/thatziv/webhook 
+    STEAL WITH CREDITS TO https://venom69tooop.github.io/web-webhook-sender/
 */
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 * {
